kubernetes-dashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-service
spec:
  selector:
    app: kubernetes-dashboard
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
      nodePort: 32711
